--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<html>
-    <head>
-        <title>My first git</title>
-    </head>
-   <body>
-    <h1>hello</h1>
-       <p>good morning!</p>
-       <h1>swetha</h1>
-   </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #4CAF50;
+      padding: 20px;
+      color: white;
+      font-size: 2em;
+    }
+    nav {
+      margin: 20px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #4CAF50;
+      font-weight: bold;
+    }
+    section {
+      padding: 40px;
+    }
+    footer {
+      background-color: #f1f1f1;
+      padding: 10px;
+      margin-top: 20px;
+      font-size: 0.9em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    Welcome to My Website
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="home">
+    <h2>Home</h2>
+    <p>This is the homepage of your awesome website!</p>
+  </section>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>Here you can write something about yourself or your project.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out via email or social media.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 My Website | All Rights Reserved
+  </footer>
+
+</body>
 </html>
