--- a/index.html
+++ b/index.html
@@ -3,44 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Website</title>
+  <title>My Colorful Website</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #74ebd5, #ACB6E5);
+      color: #333;
     }
     header {
-      background-color: #4CAF50;
-      padding: 20px;
+      background: linear-gradient(to right, #ff7e5f, #feb47b);
+      padding: 30px;
       color: white;
-      font-size: 2em;
+      font-size: 2.5em;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
     nav {
       margin: 20px;
+      background-color: #ffffffaa;
+      padding: 15px;
+      border-radius: 10px;
+      display: inline-block;
     }
     nav a {
-      margin: 0 15px;
+      margin: 0 20px;
       text-decoration: none;
-      color: #4CAF50;
+      color: #ff7e5f;
       font-weight: bold;
+      font-size: 1.2em;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #feb47b;
     }
     section {
-      padding: 40px;
+      padding: 50px;
+      background: #ffffffcc;
+      margin: 30px auto;
+      width: 80%;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     footer {
-      background-color: #f1f1f1;
-      padding: 10px;
-      margin-top: 20px;
-      font-size: 0.9em;
+      background: linear-gradient(to right, #4facfe, #00f2fe);
+      padding: 20px;
+      margin-top: 40px;
+      color: white;
+      font-size: 1em;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
   <header>
-    Welcome to My Website
+    Welcome to My Colorful Website
   </header>
 
   <nav>
@@ -51,21 +69,21 @@
 
   <section id="home">
     <h2>Home</h2>
-    <p>This is the homepage of your awesome website!</p>
+    <p>This is the vibrant homepage of your awesome colorful website!</p>
   </section>
 
   <section id="about">
     <h2>About</h2>
-    <p>Here you can write something about yourself or your project.</p>
+    <p>Learn more about me and my exciting projects!</p>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Feel free to reach out via email or social media.</p>
+    <p>Let's connect through email or social media!</p>
   </section>
 
   <footer>
-    &copy; 2025 My Website | All Rights Reserved
+    &copy; 2025 My Colorful Website | All Rights Reserved
   </footer>
 
 </body>
